--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
@@ -15,12 +19,14 @@
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "jest-fetch-mock": "^3.0.3",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-paper": "^5.12.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "jest": "^29.7.0"
   },
   "private": true
 }
